tests/baselines/reference/ModuleWithExportedAndNonExportedClasses.errors.txt
==== tests/cases/compiler/ModuleWithExportedAndNonExportedClasses.ts (2 errors) ====
    module A {
        export class A {
            id: number;
            name: string;
        }
    
        export class AG<T, U>{
            id: T;
            name: U;
        }
    
        class A2 {
            id: number;
            name: string;
        }
    
        class AG2<T, U>{
            id: T;
            name: U;
        }
    }
    
    // no errors expected, these are all exported
    var a: { id: number; name: string };
    var a = new A.A();
    
    var AG = new A.AG<number, string>()
    
    // errors expected, these are not exported
    var a2 = new A.A2();
                   ~~
!!! ModuleWithExportedAndNonExportedClasses.ts(30,16): error TS2094: The property 'A2' does not exist on value of type 'typeof A'.
    var ag2 = new A.A2<string, number>();
                    ~~
!!! ModuleWithExportedAndNonExportedClasses.ts(31,17): error TS2094: The property 'A2' does not exist on value of type 'typeof A'.
    
    